--- a/berbis-gretl-example/adreces.properties
+++ b/berbis-gretl-example/adreces.properties
@@ -21,7 +21,11 @@
 path.de.descarrega=./downloads/
 
 # llista de noms de definició de descàrrega, separats per coma
-fitxers.a.actualitzar=banc.espanya.ch1.s1,banc.espanya.ch1.s2
+fitxers.a.actualitzar=banc.espanya.ch1.s1,banc.espanya.ch1.s2,banc.espanya.ch1.s1,banc.espanya.ch1.s2,\
+banc.espanya.ch1.s1,banc.espanya.ch1.s2,banc.espanya.ch1.s1,banc.espanya.ch1.s2,\
+banc.espanya.ch1.s1,banc.espanya.ch1.s2,banc.espanya.ch1.s1,banc.espanya.ch1.s2,\
+banc.espanya.ch1.s1,banc.espanya.ch1.s2,banc.espanya.ch1.s1,banc.espanya.ch1.s2,\
+banc.espanya.ch1.s1,banc.espanya.ch1.s2,banc.espanya.ch1.s1,banc.espanya.ch1.s2
 
 # definició de descarga
 url.banc.espanya.ch1.s1=http://www.bde.es/webbde/es/estadis/infoest/series/be0101.csv
