--- a/gamba-container/pom.xml
+++ b/gamba-container/pom.xml
@@ -91,3 +91,16 @@
 
 
 </project>
+
+
+<!--
+
+	* fwk web:
+		- sense reflection
+		- reflection a saco pq quedi maco tipo Play!/Zend/...
+	* servidor http/cgi/java
+	* ioc container
+	* logger 
+	
+-->
+
