--- a/trunk/gamba-container/pom.xml
+++ b/trunk/gamba-container/pom.xml
@@ -98,6 +98,7 @@
 	* fwk web:
 		- sense reflection
 		- reflection a saco pq quedi maco tipo Play!/Zend/...
+	* jdbc templates!!
 	* servidor http/cgi/java
 	* ioc container
 	* logger 
