--- a/gamba-logging/src/test/resources/logging-config.properties
+++ b/gamba-logging/src/test/resources/logging-config.properties
@@ -5,5 +5,6 @@ disabled=false
 log-level=debug
 show-time=true
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler , \
+				org.homs.gamba.logging.handlers.ConsoleHandler , \
 				org.homs.gamba.logging.handlers.ListHandler
 #time-format=hjl
