--- a/trunk/gamba-logging/src/test/resources/logging-config.properties
+++ b/trunk/gamba-logging/src/test/resources/logging-config.properties
@@ -4,7 +4,5 @@
 disabled=false
 log-level=debug
 show-time=true
-handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler , \
-				org.homs.gamba.logging.handlers.ConsoleHandler , \
-				org.homs.gamba.logging.handlers.ListHandler
+handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
 #time-format=hjl
