--- a/trunk/gamba-logging/pom.xml
+++ b/trunk/gamba-logging/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.homs</groupId>
 	<artifactId>gamba-logging</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<dependencies>
 
