--- a/trunk/gamba-logging/src/test/resources/logging-config.properties
+++ b/trunk/gamba-logging/src/test/resources/logging-config.properties
@@ -1,8 +1,21 @@
 
 
 
+# dd MMMMM yyyy
+# yyyyMMdd
+# dd.MM.yy
+# MM/dd/yy
+# yyyy.MM.dd G 'at' hh:mm:ss z
+# EEE, MMM d, ''yy
+# h:mm a
+# H:mm:ss:SSS
+# K:mm a,z
+# yyyy.MMMMM.dd GGG hh:mm aaa
+
+
+
 disabled=false
 log-level=debug
 show-time=true
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
-#time-format=hjl
+time-format='('hh:mm:ss,SSS')'
