--- a/trunk/gamba-logging/src/test/resources/logging-config.properties
+++ b/trunk/gamba-logging/src/test/resources/logging-config.properties
@@ -13,9 +13,15 @@
 # yyyy.MMMMM.dd GGG hh:mm aaa
 
 
-
+# sets logging system On/Off
 disabled=false
-log-level=debug
+
+# sets message level filtering 
+log-level=warning
+
+# includes a formatted timestamp into log messages
 show-time=true
+time-format=hh\:mm\:ss,SSS' =>'
+
+# list of a handler classes to witch log
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
-time-format='('hh:mm:ss,SSS')'
