--- a/trunk/gamba-logging/src/test/resources/logging-config.properties
+++ b/trunk/gamba-logging/src/test/resources/logging-config.properties
@@ -21,7 +21,7 @@ log-level=warning
 
 # includes a formatted timestamp into log messages
 show-time=true
-time-format=hh\:mm\:ss,SSS' =>'
+time-format=hh\:mm\:ss,SSS' \=>|'
 
 # list of a handler classes to witch log
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
