--- a/trunk/gamba-logging/src/test/resources/config-loader-test-2.properties
+++ b/trunk/gamba-logging/src/test/resources/config-loader-test-2.properties
@@ -1,7 +1,7 @@
 
 disabled=false
 log-level=warning
-show-time=true
+show-time=none
 time-format=dd/MM/yyyy G 'at' hh:mm:ss z
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
 
