--- a/trunk/gamba-logging/src/test/resources/logging-config.properties
+++ b/trunk/gamba-logging/src/test/resources/logging-config.properties
@@ -23,6 +23,10 @@ log-level=warning
 show-time=true
 time-format=hh:mm:ss,SSS' =>'
 
-# list of a handler classes to witch log
+# list of a handler classes to wich log
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
 
+
+
+#ESSID 802.11g: Livebox-22A4
+#6529FC5615396D4914E7DEF72C
