--- a/trunk/gamba-logging/src/test/resources/logging-config.properties
+++ b/trunk/gamba-logging/src/test/resources/logging-config.properties
@@ -24,7 +24,9 @@ show-time=true
 time-format=hh:mm:ss,SSS' =>'
 
 # list of a handler classes to wich log
-handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
+handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler,  \
+				org.homs.gamba.logging.handlers.ListHandler,     \
+				org.homs.gamba.logging.handlers.FileHandler
 
 
 
