--- a/gamba-logging/src/test/resources/logging-config.properties
+++ b/gamba-logging/src/test/resources/logging-config.properties
@@ -25,7 +25,7 @@ time-format=hh:mm:ss,SSS' =>'
 
 # list of a handler classes to wich log
 handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler,  \
-				org.homs.gamba.logging.handlers.ListHandler,     \
+				org.homs.gamba.logging.handlers.DummyHandler,     \
 				org.homs.gamba.logging.handlers.FileHandler
 
 
