--- a/gamba-logging/src/test/resources/config-loader-test-1.properties
+++ b/gamba-logging/src/test/resources/config-loader-test-1.properties
@@ -1,4 +1,4 @@
 
-handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.ListHandler
+handler-classes=org.homs.gamba.logging.handlers.ConsoleHandler, org.homs.gamba.logging.handlers.DummyHandler
 
 
