--- a/trunk/gamba-logging/pom.xml
+++ b/trunk/gamba-logging/pom.xml
@@ -6,11 +6,18 @@
 	<groupId>org.homs</groupId>
 	<artifactId>gamba-logging</artifactId>
 	<version>0.0.1</version>
-	
+
 	<name>Gamba Logging</name>
 	<description>simple and lightweight logging for Java</description>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.homs</groupId>
+			<artifactId>gamba-stubs</artifactId>
+			<version>0.0.1</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
