--- a/gamba-stubs/build.xml
+++ b/gamba-stubs/build.xml
@@ -29,7 +29,7 @@
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 	<target name="compile" depends="clean">
 		<javac srcdir="${src-dir}" destdir="${build-dir}" />
-		<javac srcdir="${test-dir}" destdir="${build-dir}" />
+		<!--<javac srcdir="${test-dir}" destdir="${build-dir}" />-->
 	</target>
 
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
