--- a/trunk/gamba-framework-demo-app/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/gamba-framework-demo-app/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
 			<param-name>view-resource-postfix</param-name>
 			<param-value>.jsp</param-value>
 		</init-param>
+		<init-param>
+			<param-name>jdbc-pooling-config</param-name>
+			<param-value>org.homs.demo.config.MyConnection</param-value>
+		</init-param>
+		
 	</servlet>
 
 	<servlet-mapping>
