--- a/trunk/gamba-framework-demo-app/pom.xml
+++ b/trunk/gamba-framework-demo-app/pom.xml
@@ -98,14 +98,14 @@
 		</plugins>
 	</build>
 
-	<repositories>
-
-		<repository>
-			<id>mvn2</id>
-			<name>Maven2 Public Repository</name>
-			<url>http://repo1.maven.org/maven2/</url>
-		</repository>
-
-	</repositories>
+<!--	<repositories>--> 
+<!---->
+<!--		<repository>-->
+<!--			<id>mvn2</id>-->
+<!--			<name>Maven2 Public Repository</name>-->
+<!--			<url>http://repo1.maven.org/maven2/</url>-->
+<!--		</repository>-->
+<!---->
+<!--	</repositories>-->
 
 </project>
