--- a/trunk/gamba-framework-demo-app/pom.xml
+++ b/trunk/gamba-framework-demo-app/pom.xml
@@ -96,6 +96,27 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+<!--					<includes>-->
+<!--						<include>**/org/homs/gamba/*</include>-->
+<!--					</includes>-->
+					<excludes>
+						<exclude>**/org/homs/demo/</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.4.2</version>
 				<configuration>
