--- a/commons-mocks/pom.xml
+++ b/commons-mocks/pom.xml
@@ -2,6 +2,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+<!--
+mocha ==> mockha
+Damocles
+democracy
+democrat
+hummock
+hammock
+mockernut
+mockingbird
+mockup - maqueta
+
+ -->
 
 	<groupId>org.homs</groupId>
 	<artifactId>gamba-mocks</artifactId>
