--- a/trunk/gro-connection-pool/pom.xml
+++ b/trunk/gro-connection-pool/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.gro</groupId>
-	<artifactId>connection-pool</artifactId>
+	<artifactId>gro-connection-pool</artifactId>
 	<version>0.0.1</version>
 
 
