--- a/trunk/gro-validation/pom.xml
+++ b/trunk/gro-validation/pom.xml
@@ -4,7 +4,7 @@
 	
 	
 	<groupId>org.gro</groupId>
-	<artifactId>validation</artifactId>
+	<artifactId>gro-validation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
