--- a/gro-anno-scan/pom.xml
+++ b/gro-anno-scan/pom.xml
@@ -4,7 +4,7 @@
 	
 	
 	<groupId>org.gro</groupId>
-	<artifactId>anno-scan</artifactId>
+	<artifactId>gro-anno-scan</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
