--- a/trunk/gro-demo-webapp/src/gro-logging-config.properties
+++ b/trunk/gro-demo-webapp/src/gro-logging-config.properties
@@ -1,4 +1,5 @@
 
 log-level=all
-time-format=HH:mm:SSS dd/MMM/yyy 
-log-file-name=log.txt
+time-format=HH:mm:SSS
+# dd/MMM/yyy 
+log-file-name=./log.txt
