--- a/trunk/gro-mvc/pom.xml
+++ b/trunk/gro-mvc/pom.xml
@@ -36,12 +36,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.gro</groupId>
-			<artifactId>connection-pool</artifactId>
-			<version>0.0.1</version>
-			<scope>provided</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.gro</groupId>-->
+<!--			<artifactId>connection-pool</artifactId>-->
+<!--			<version>0.0.1</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.gro</groupId>
 			<artifactId>gro-logging</artifactId>
